feat: expot area picture annotation with annotator 3d
* feat(ExportAreaPictureAnnotation): expot area picture annotation with annotator 3D

* chore: put globalImage3D on multipart directly